--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName=".MainActivity"/>
+        <provider
+            android:authorities="com.reshmi.james.popularmovies"
+            android:name=".provider.MovieContentProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
