--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:parentActivityName=".ui.popmovies.PopularMoviesActivity"/>
         <provider
             android:authorities="com.reshmi.james.popularmovies"
-            android:name=".data.database.MovieContentProvider"
+            android:name=".data.MovieContentProvider"
             android:exported="false"/>
     </application>
 
